# varna-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/controllers/: admin_controller.py  auth_controller.py  cart.py  cart_controller.py  order_controller.py  orders.py  product_controller.py  products.py
app/routes/: admin.py  auth.py  cart.py  orders.py  products.py
app/services/: admin_service.py  auth_service.py  cart_service.py  order_service.py  product_service.py
