[project]
name = "varna-backend"
version = "0.1.0"
description = "Backend API for Varna luxury saree collection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
    "cors==1.0.1",
    "alembic==1.13.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "google-auth==2.24.0",
    "python-multipart==0.0.6",
]
